<resources>
    <string name="app_name">load</string>

    <!-- ########### loginSuccess start ########### -->
    <string name="mobile_register">手机号注册</string>
    <string name="mobile_hint">请输入注册的手机号</string>
    <string name="pwd">密码</string>
    <string name="pwd_hint">6–24位数字英文或字符</string>
    <string name="confirm_register">确认注册</string>
    <string name="use_hint">同意《产品使用许可协议》</string>
    <string name="code_hint">请输入图形验证码</string>
    <string name="register_error">注册信息不能为空</string>
    <string name="code_err">验证码填写错误</string>
    <string name="read_err">请阅读用户协议</string>
    <!-- ########### loginSuccess end ########### -->

    <!-- ########### login start ########### -->
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="register_now">立即注册</string>
    <!-- ########### login end ########### -->

    <!-- ########### HomeActivity start ########### -->
    <string name="load_nav_bookkeeping">记账本</string>
    <string name="load_nav_memorandum">备忘录</string>
    <string name="add">记一记</string>
    <string name="press_again_app_exit">再按一次退出</string>
    <!-- ########### HomeActivity end ########### -->

</resources>
