<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_alpha_20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp_40"
            android:text="Notepad"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="italic"/>

        <EditText
            android:id="@+id/mobile_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24"
            android:background="@drawable/register_edt_bg"
            android:hint="@string/mobile_hint"
            android:inputType="number"
            android:maxLength="11"
            android:paddingBottom="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/sp_14"/>

        <EditText
            android:id="@+id/pwd_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:background="@drawable/register_edt_bg"
            android:hint="@string/login_pwd_hint"
            android:inputType="textPassword"
            android:maxLength="11"
            android:paddingBottom="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/sp_14"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_24"
            android:background="@color/main"
            android:gravity="center"
            android:paddingLeft="@dimen/dp_10"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24">

            <TextView
                android:id="@+id/forget_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/orange"
                android:text="@string/forget_pwd"
                android:textSize="@dimen/sp_16"/>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white"/>

            <TextView
                android:id="@+id/register_now"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/register_now"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>