<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_alpha_20"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/back"
        android:layout_width="@dimen/dp_24"
        android:layout_height="@dimen/dp_24"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:src="@drawable/common_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:text="@string/mobile_register"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/register_edt_bg"
        android:paddingBottom="@dimen/dp_4"
        android:paddingTop="@dimen/dp_4">

        <TextView
            android:id="@+id/head_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:text="+86"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/mobile_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/head_mobile"
            android:background="@null"
            android:hint="@string/mobile_hint"
            android:paddingBottom="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/sp_14" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_4"
        android:paddingTop="@dimen/dp_4">

        <EditText
            android:id="@+id/code_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_toLeftOf="@+id/captcha_img"
            android:background="@drawable/register_edt_bg"
            android:hint="@string/code_hint"
            android:paddingBottom="@dimen/dp_14"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_14"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/sp_14" />

        <ImageView
            android:id="@+id/captcha_img"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/register_edt_bg"
        android:paddingBottom="@dimen/dp_4"
        android:paddingTop="@dimen/dp_4">

        <TextView
            android:id="@+id/pwd_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:text="@string/pwd"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/pwd_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/pwd_hint"
            android:background="@null"
            android:hint="@string/pwd_hint"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/sp_14" />

    </RelativeLayout>

    <Button
        android:id="@+id/confirm_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:background="@color/main"
        android:gravity="center"
        android:text="@string/confirm_register"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/check_box_main" />

        <TextView
            android:id="@+id/agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/use_hint"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>